--- a/N1/Lede/LE-mini.config
+++ b/N1/Lede/LE-mini.config
@@ -52,6 +52,8 @@ CONFIG_PACKAGE_luci-app-mosdns=n
 CONFIG_PACKAGE_luci-app-alist=n
 CONFIG_PACKAGE_luci-app-ttyd=y
 CONFIG_PACKAGE_luci-app-openclash=y
+CONFIG_PACKAGE_luci-app-quickstart=y
+CONFIG_PACKAGE_luci-app-istorex=y
 
 #acme
 CONFIG_PACKAGE_luci-app-acme=n
